// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergify default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

queue_rules:
  - name: default
    update_method: merge
    conditions:
      - "#approved-reviews-by>=1"
      - -label~=(do-not-merge)
      - status-success=build
pull_request_rules:
  - name: Automatic merge on approval and successful build
    actions:
      delete_head_branch: {}
      queue:
        method: squash
        name: default
        commit_message_template: |-
          {{ title }} (#{{ number }})

          {{ body }}
    conditions:
      - "#approved-reviews-by>=1"
      - -label~=(do-not-merge)
      - status-success=build
"
`;

exports[`mergify with automerge options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

queue_rules:
  - name: default
    update_method: merge
    conditions:
      - "#approved-reviews-by>=3"
      - -label~=(do-not-merge|missing-tests)
      - status-success=build
pull_request_rules:
  - name: Automatic merge on approval and successful build
    actions:
      delete_head_branch: {}
      queue:
        method: squash
        name: default
        commit_message_template: |-
          {{ title }} (#{{ number }})

          {{ body }}
    conditions:
      - "#approved-reviews-by>=3"
      - -label~=(do-not-merge|missing-tests)
      - status-success=build
"
`;

exports[`mergify without automerge, with custom rules 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

queue_rules: []
pull_request_rules:
  - actions:
      - action
    conditions:
      - condition
    name: rule-name
"
`;
